# travelling-salesman-plotter

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: ci-tests.yml
docs/: README.md
src/tsp_plotter/: main.py  output_files.py
src/tsp_plotter/problem/: distance_writer.py  points_plotter.py  problem_generator.py  problem_writer.py
src/tsp_plotter/solution/: path_plotter.py  problem_reader.py  solution_plotter.py  solution_reader.py
tests/problem/: test_distance_writer.py  test_points_plotter.py  test_problem_generator.py  test_problem_writer.py
tests/solution/: test_path_plotter.py  test_problem_reader.py  test_solution_plotter.py  test_solution_reader.py
